# bazel-template

./: .antigravityrules  .bazelrc  .cursorrules  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml  main.py  requirements.in  requirements.txt  setup.py
.agents/rules/: guiding-philosophy.md
ai-agents/: README.md
py/: BUILD.bazel  calculator.py  calculator_test.py  main.py
tools/: BUILD.bazel  lint.bzl
