module(
    name = "bazel_template",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
