module(
    name = "bazel_template",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.37.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "aspect_rules_lint", version = "2.5.2")
bazel_dep(name = "ruff_prebuilt", version = "0.15.12.1", repo_name = "ruff")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.37.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains("@zig_sdk//toolchain/...")
