load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "calculator",
    srcs = ["calculator.py"],
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [":calculator"],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":calculator",
        requirement("requests"),
        requirement("cyclopts"),
    ],
)
